--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
 
             <div class="form-group">
-                <p class="any">Any comments or suggestions?</p>
+                <p>Any comments or suggestions?</p>
                 <textarea id="comments" class="textarea" name="comment"
                     placeholder="Enter your comment here..."></textarea>
             </div>
